Changed window title to project name and added icon

--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:colorpicker="clr-namespace:ColorPicker;assembly=ColorPicker"
         xmlns:local="clr-namespace:GUI"
         mc:Ignorable="d"
-        Title="MainWindow" WindowState="Maximized">
+        Title="ItCanDraw" WindowState="Maximized">
     <Window.Resources>
         <local:Vector2Converter x:Key="vec2conv"/>
         <local:DocumentStateConverter x:Key="docstateconv"/>
